# Arrakis

./: .gitignore  Arrakis.jucer  CMakeLists.txt
Docs/: SineWave.xlsx
JuceLibraryCode/: JuceHeader.h
Source/: AudioComponentBase.cpp  AudioComponentBase.h  AudioRecorderComponent.cpp  AudioRecorderComponent.h  DecibelSlider.h  JuceHeader.h  Main.cpp  MainComponent.cpp  MainComponent.h  Oscillator.cpp  Oscillator.h  SineWave2Component.cpp  SineWave2Component.h  SineWaveComponent.cpp  SineWaveComponent.h  VolumeControlComponent.cpp  VolumeControlComponent.h
